# ilib-llama.cpp

./: .gitmodules  CMakeLists.txt  README.md
ac-local-plugin/: CMakeLists.txt  loader-schema.json
ac-local-plugin/code/: CMakeLists.txt  LlamaModelSchema.hpp  LocalLlama.cpp  aclp-llama-interface.hpp  llama-schema.yml
ac-local-plugin/code/ac/local/: LocalLlama.cpp  LocalLlama.hpp  export.h
ac-local-plugin/example/: CMakeLists.txt  e-local-llama-chat.cpp  e-local-llama-run.cpp  ep-chat.cpp  ep-run.cpp
ac-local-plugin/schema/: CMakeLists.txt
ac-local-plugin/schema-gen/: CMakeLists.txt  schema-gen.cpp
ac-local-plugin/schema/ac/schema/: LlamaCpp.hpp
ac-local-plugin/tools/: CMakeLists.txt  generate-schema.cpp
code/: CMakeLists.txt
code/ac/llama/: AntipromptManager.cpp  AntipromptManager.hpp  ChatFormat.cpp  ChatFormat.hpp  ChatMsg.hpp  ControlVector.cpp  ControlVector.hpp  IncrementalStringFinder.cpp  IncrementalStringFinder.hpp  Init.cpp  Init.hpp  Instance.cpp  Instance.hpp  InstanceEmbedding.cpp  InstanceEmbedding.hpp  Logging.cpp  Logging.hpp  LogitComparer.cpp  LogitComparer.hpp  LoraAdapter.cpp  LoraAdapter.hpp  Model.cpp  Model.hpp  ResourceCache.cpp  ResourceCache.hpp  Sampler.cpp  Sampler.hpp  Session.cpp  Session.hpp  Token.hpp  Vocab.cpp  Vocab.hpp  export.h
code/minja-include-hack/nlohmann/: json.hpp
doc/: reimplement.md
example/: CMakeLists.txt  e-basic.cpp  e-embedding.cpp  e-gui.cpp  e-infill.cpp  e-logits-cmp.cpp  e-rag.cpp  e-verify.cpp
test/: CMakeLists.txt  t-Antiprompt.cpp  t-ChatFormat.cpp  t-Session.cpp  t-integration.cpp
